# opengl2-glut-line-drawing-algo

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Circle.h  Display.h  Line.h  menu.h
src/: Circle.cpp  Display.cpp  Line.cpp  main.cpp
